--- a/pkgs/nvfetcher.toml
+++ b/pkgs/nvfetcher.toml
@@ -100,6 +100,7 @@ fetch.git = "https://github.com/huhridge/huh-spicetify-extensions"
 
 [playlistIconsSrc]
 src.git = "https://github.com/jeroentvb/spicetify-playlist-icons"
+src.branch = "dist"
 fetch.git = "https://github.com/jeroentvb/spicetify-playlist-icons"
 
 [tetraxSrc]
@@ -108,6 +109,7 @@ fetch.git = "https://github.com/Tetrax-10/Spicetify-Extensions"
 
 [powerBarSrc]
 src.git = "https://github.com/jeroentvb/spicetify-power-bar"
+src.branch = "dist"
 fetch.git = "https://github.com/jeroentvb/spicetify-power-bar"
 
 [groupSessionSrc]
