--- a/pkgs/nvfetcher.toml
+++ b/pkgs/nvfetcher.toml
@@ -52,6 +52,7 @@ fetch.git = "https://github.com/Darkempire78/Dracula-Spicetify"
 
 [nordSrc]
 src.git = "https://github.com/Tetrax-10/Nord-Spotify"
+src.branch = "dist"
 fetch.git = "https://github.com/Tetrax-10/Nord-Spotify"
 
 [dakshExtensions]
